<resources>
    <string name="app_name">BinStore</string>

    <!-- MainActivity -->
    <string name="navigation_home">首页</string>
    <string name="navigation_mine">我的</string>

    <!-- HomeFragment -->
    <string name="category_item_01">女装</string>
    <string name="category_item_02">母婴</string>
    <string name="category_item_03">美妆</string>
    <string name="category_item_04">鞋包</string>
    <string name="category_item_05">内衣</string>
    <string name="category_item_06">男装</string>
    <string name="category_item_07">美食</string>
    <string name="category_item_08">数码</string>
    <string name="category_item_09">家居</string>
    <string name="category_item_10">配饰</string>

    <!-- MineFragment -->
    <string name="login_register">登录/注册</string>
    <string name="option_announcement">官方公告</string>
    <string name="option_feedback">意见反馈</string>
    <string name="option_about">关于BinStore</string>

    <!-- CommodityActivity -->
    <string name="show_type_default">综合</string>
    <string name="show_type_price">券后价</string>
    <string name="show_type_sales">销量</string>
    <string name="title_default">商品</string>

    <!-- UserActivity -->
    <string name="edit_hint_account">请输入手机号</string>
    <string name="edit_hint_password">请输入密码</string>
    <string name="edit_hint_security">请输入验证码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="get_security_code">获取验证码</string>
    <string name="refresh_security_code">重新获取</string>

    <!-- Image content description -->
    <string name="category_item_image">商品类别图标</string>
    <string name="commodity_picture">商品图片</string>
    <string name="drop_up_image">收起图标</string>
    <string name="drop_down_image">展开图标</string>
    <string name="ascending_order_image">升序图标</string>
    <string name="descending_order_image">降序图标</string>
    <string name="list_view_image">列表图标</string>
    <string name="grid_view_image">网格图标</string>
    <string name="login_account">帐号图标</string>
    <string name="login_password">密码图标</string>
    <string name="login_password_peek">密码显示或者隐藏图标</string>
    <string name="login_security_code">验证码图标</string>
    <string name="compound_icon_left">复合选项条左侧图标</string>
    <string name="compound_icon_right">复合选项条右侧图标</string>

</resources>
